gossip for heroku 1

--- a/app/views/gossips/_formgossip.html.erb
+++ b/app/views/gossips/_formgossip.html.erb
@@ -14,30 +14,49 @@
     </div>
   <% end %>
  
-  <p>
-    <%= form.label :anonymous_author %><br>
-    <%= form.text_field :anonymous_author %>
-  </p>
- 
-  <p>
-    <%= form.label :content %><br>
-    <%= form.text_area :content %>
-  </p>
- 
-  <p>
-    <%= form.submit %>
-  </p>
+  <h1>2e version for create</h1>
 
 
-  <h1>2e version</h1>
-
-
-   <%= form_tag(gossips_path) do %>
+   <%= form_tag(@gossip, :method=>:post) do %>
     <%= label_tag('anonymous_author', 'Anonymous_Author : ') %>
     <%= text_field_tag('anonymous_author') %>
     <%= label_tag('content','Content :') %>
     <%= text_area_tag('content') %>
     <%= submit_tag("Ajouter") %>
+   <% end %>
+
+ <% end %>
+
+
+
+
+<%= form_with model: @gossip, local: true do |form| %>
+ 
+  <% if @gossip.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@gossip.errors.count, "error") %> prohibited
+        this gossip from being saved:
+      </h2>
+      <ul>
+        <% @gossip.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
+
+  <h1>2e version for update</h1>
+
+
+   <%= form_tag(@gossip, :method=>:put) do %>
+    <%= label_tag('anonymous_author', 'Anonymous_Author : ') %>
+    <%= text_field_tag('anonymous_author') %>
+    <%= label_tag('content','Content :') %>
+    <%= text_area_tag('content') %>
+    <%= submit_tag("Actualiser") %>
    <% end %>
 
  <% end %>
