--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,6 +1,37 @@
 <h1>New Gossip</h1>
 
-<%= render 'formgossip' %>
+
+
+<%= form_with model: @gossip, local: true do |form| %>
+ 
+  <% if @gossip.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@gossip.errors.count, "error") %> prohibited
+        this gossip from being saved:
+      </h2>
+      <ul>
+        <% @gossip.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+ 
+  <h1>2e version for create</h1>
+
+
+   <%= form_tag(@gossip, :method=>:post) do %>
+    <%= label_tag('anonymous_author', 'Anonymous_Author : ') %>
+    <%= text_field_tag('anonymous_author') %>
+    <%= label_tag('content','Content :') %>
+    <%= text_area_tag('content') %>
+    <%= submit_tag("Ajouter") %>
+   <% end %>
+
+ <% end %>
+
+
  
 <%= link_to 'Back', gossips_path %>
 
